# trial-rust

./: Cargo.toml  License  Readme.md  readme.md
actixdemo/: Cargo.toml  readme.md
actixdemo/httptest/: call.http  errors.http  guards.http  hello.http  jobs.http  login.http  static_files.http  test.http  upload.http  users.http  web_client.http
actixdemo/libdemo/: Cargo.toml
actixdemo/libdemo/src/: lib.rs
actixdemo/migration/: Cargo.toml
actixdemo/migration/src/: lib.rs  m20240227_054000_create_user_table.rs
actixdemo/webdemo/: .example.env  Cargo.toml  build.rs
actixdemo/webdemo/res/: 123.txt
actixdemo/webdemo/src/: app.rs  errors.rs  guards.rs  main.rs
actixdemo/webdemo/src/app/: hello.rs  jobs.rs  streams.rs  users.rs  web_client.rs
actixdemo/webdemo/src/entities/: user.rs
actixdemo/webdemo/src/jobs/: mod.rs  rt_ephemeral_jobs.rs
actixdemo/webdemo/src/service/: hi.rs
actixdemo/webdemo/src/tasks/: mod.rs  plus_five.rs
actixdemo2/: Cargo.toml  Readme.md
actixdemo2/httptest/: queue.http  state.http
actixdemo2/libdemo/: Cargo.toml
actixdemo2/libdemo/src/: fs.rs  job.rs  lib.rs  queue.rs  task.rs
actixdemo2/webdemo/: Cargo.toml
actixdemo2/webdemo/src/: main.rs  states.rs
actixdemo2/webdemo/src/apis/: mod.rs  queue.rs
actixdemo2/webdemo/src/jobs/: bar_jobs.rs  foo_jobs.rs  mod.rs
actixdemo3/: Cargo.toml
actixdemo3/httptest/: state.http
actixdemo3/libdemo/: Cargo.toml
actixdemo3/libdemo/src/: lib.rs
actixdemo3/proto/: echo.proto
actixdemo3/webdemo/: Cargo.toml
actixdemo3/webdemo/src/: main.rs  states.rs
actixdemo3/webdemo/src/apis/: mod.rs  pb.rs
actixdemo3/webdemo/src/wsapis/: echo.rs  mod.rs
actixdemo3/wsclidemo/: Cargo.toml  build.rs
actixdemo3/wsclidemo/src/: main.rs
azului/: Cargo.toml
crossdemo/: Cargo.toml
crossdemo/httptest/: hello.http
crossdemo/hwdemo/: Cargo.toml
dbormdemo/: .gitignore  Cargo.toml  Readme.md
dbormdemo/dexe/: Cargo.toml
dbormdemo/dieseldexe/: Cargo.toml
dbormdemo/seaormdemo/: Cargo.toml  Readme.md
dbormdemo/seaormdemo/migration/: Cargo.toml
dbormdemo/seaormdemo/migration/src/: lib.rs  m20230710_011100_create_bakery_table.rs  m20230710_011111_create_chef_table.rs
dbormdemo/seaormdemo/src/: main.rs
dbormdemo/seaormdemo/src/entities/: bakery.rs  chef.rs
demo2/: .gitignore
demo2/deferdemo/: Cargo.toml
demo2/dyndemo/: Cargo.toml
demo2/dyndemo/src/: main.rs  mylog.rs
demo2/icedui/: Cargo.toml  readme.md
demo2/icodemo/: Cargo.toml
demo2/redbdemo/: Cargo.toml  readme.md
demo2/svgdemo/: Cargo.toml  build.rs
dioxusdemo/: Cargo.toml
dioxusdemo/simpledemo/: Cargo.toml
fulltextdemo/: .gitignore  Cargo.toml
fulltextdemo/jiebademo/: Cargo.toml
fulltextdemo/leveladbdemo/: Cargo.toml
fulltextdemo/leveladbdemo/src/: main.rs
fulltextdemo/leveldbdemo/: Cargo.toml
fulltextdemo/lnxdemo/: demo_doc.http  demo_index.http  demo_transactions.http  docker-compose.yml  readme.md
fulltextdemo/quickwitdemo/: .gitignore  demo_index.http  docker-compose.yml  readme.md
fulltextdemo/tantivydemo/: Cargo.toml
hostsman/: Cargo.toml
hostsman/src/: ngx.rs
icedui/: Cargo.toml
icedui/src/: login.rs  main.rs
jwtdemo/: Cargo.toml
jwtdemo/jsonwebtokendemo/: Cargo.toml
kit/: .gitignore  Cargo.toml  Readme.md
kit/crnlf/: Cargo.toml
kit/mkpw/: Cargo.toml
logsrv/: Cargo.toml  Readme.md
logsrv/logclient/: Cargo.toml
logsrv/logpack/: Cargo.toml
logsrv/logserver/: Cargo.toml
logsrv/tcpclient/: Cargo.toml
logsrv/tcpserver/: Cargo.toml
masonryguidemo/: Cargo.toml  Readme.md
masonryguidemo/src/: main.rs
mkpw/: Cargo.toml
mkpw/src/: main.rs
mysql/: Cargo.toml
mysql/src/: main.rs
nwgui/src/: main.rs
olddemo/: .gitignore  Cargo.toml  Readme.md
olddemo/imgui/: Cargo.toml
olddemo/imgui/src/: support.rs
olddemo/kasui/: Cargo.toml
olddemo/kasui/src/: main.rs
olddemo/mysql/: Cargo.toml
olddemo/nwgui/: Cargo.toml
olddemo/storage/: Cargo.toml
olddemo/uniqrow/: Cargo.toml
olddemo/wasmpd/: Cargo.toml
olddemo/wasmprs/: Cargo.toml
osiodemo/: Cargo.toml
osiodemo/maxfd/: Cargo.toml
pbdemo/: Cargo.toml
pbdemo/prostdemo/: Cargo.toml  build.rs
pbdemo/protos/: echo.proto
pbdemo/rspbdemo/: Cargo.toml  build.rs
pdfdemo/: .gitignore  Cargo.toml
pdfdemo/imagedemo/: Cargo.toml
pdfdemo/lopdfdemo/: Cargo.toml
pdfdemo/lopdfdemo2/: Cargo.toml
pdfdemo/lopdfdemo3/: Cargo.toml
pdfdemo/lopdfdemo4/: Cargo.toml
pdfdemo/pdfdemo/: Cargo.toml
polodemo/: Cargo.toml  Readme.md
polodemo/adddemo/: Cargo.toml
polodemo/deletedemo/: Cargo.toml
polodemo/finddemo/: Cargo.toml
polodemo/indexdemo/: Cargo.toml
polodemo/libdemo/: Cargo.toml
polodemo/transactiondemo/: Cargo.toml
polodemo/updatedemo/: Cargo.toml
pydemo/: .gitignore  Cargo.toml  Readme.md
pydemo/o3demo/: Cargo.toml
pydemo/o3pydemo/: Cargo.toml  pyproject.toml
rockdemo/: Cargo.toml  README.md
rockdemo/v05demo/: Cargo.toml
salvodemo/: Cargo.toml
seaormdemo/: .example.env  Cargo.toml  Readme.md
seaormdemo/entity/: Cargo.toml
seaormdemo/entity/src/: employee.rs  lib.rs  post.rs
seaormdemo/migration/: Cargo.toml
seaormdemo/migration/src/: lib.rs  m20230704_114211_add_new_table.rs
seaormdemo/sead/: Cargo.toml
seaormdemo/sead/src/: main.rs
slintdemo/: .gitignore  readme.md
src/: fs.rs  hosts.rs  ip.rs  main.rs
storage/: Cargo.toml
tauri1ts/: README.md  package-lock.json  package.json
tauri1yew/: Cargo.toml  README.md
tauridemo/: .gitignore  package-lock.json  package.json  readme.md
wasmpd/: Cargo.toml  LICENSE_MIT  README.md
wasmprs/: Readme.md
wasmprslib/: Cargo.toml
winit/: Cargo.toml
xilemdemo/: Cargo.toml
xlsdemo/: 2003.xls  2007.xlsx  Cargo.toml  readme.md
zmqdemo/: Cargo.toml
zmqdemo/helpers/: Cargo.toml
zmqdemo/helpers/src/: lib.rs
zmqdemo/pub_server/: Cargo.toml
zmqdemo/pub_server/src/: main.rs
zmqdemo/req_client/: Cargo.toml
zmqdemo/req_client/src/: main.rs
zmqdemo/resp_server/: Cargo.toml
zmqdemo/resp_server/src/: main.rs
zmqdemo/sub_client/: Cargo.toml
zmqdemo/sub_client/src/: main.rs
(+80 files in other folders)
