[workspace]
resolver = "2"
members = [
    "webdemo",
]

[workspace.dependencies]
actix-web = "4"
log = "0.4.20"
env_logger = "0.11.2"
sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
derive_more = "0.99.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3"