[workspace]
resolver = "2"
members = [
    "webdemo",
    "migration",
]

[workspace.dependencies]
actix-web = "4"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-files = "0.6.5"
actix-redis = "0.13.0"
log = "0.4.20"
env_logger = "0.11.2"
dotenvy = "0.15.7"
# sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
sea-orm = { version = "0.12.14", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros", ] }
derive_more = "0.99.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3"
futures-util = "0.3.30"
chrono = "0.4.34"