[workspace]
resolver = "2"
members = [
    "webdemo",
    "migration",
]

[workspace.dependencies]
actix-web = "4"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-files = "0.6.5"
actix-redis = "0.13.0"
# 4 年没维护的库版本对不上 actix 了。引入会导致 actix 部分库版本冲突，编译失败。
# actix-taskqueue = "0.1.0"
log = "0.4.20"
env_logger = "0.11.2"
dotenvy = "0.15.7"

apalis = { version= "0.5.0", features = [ "redis" ] }
# sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
sea-orm = { version = "0.12.14", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros", "debug-print",] }
sea-query = "0.30.7"
derive_more = "0.99.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3"
futures-util = "0.3.30"
chrono = "0.4.34"