[workspace]
members = [
    "webdemo",
]

[workspace.dependencies]
actix-web = "4"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
log = "0.4.20"
env_logger = "0.11.2"
dotenvy = "0.15.7"
sea-orm = { version = "0.12.14", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros", ] }
sea-query = "0.30.7"
derive_more = "0.99.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3.30"
chrono = "0.4.34"
regex = "1.10.3"

# musl 下面需要添加这个让 openssl-sys build
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }