[workspace]
resolver = "2"
members = ["libdemo", "webdemo"]

[workspace.dependencies]
actix-web = { version = "4", features = ["rustls", "macros"]}
actix-session = { version = "0.9.0", features = ["cookie-session"] }
log = "0.4.21"
env_logger = {version="0.11.2", features = ["color"]}
dotenvy = "0.15.7"
sea-orm = { version = "0.12.14", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-query = "0.30.7"
derive_more = "0.99.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3.30"
chrono = "0.4.34"
regex = "1.10.3"
apalis = { version = "0.5.1", features = ["redis"] }

# rust 1.75 提供的 async trait fn 不支持 Box Arc 等传智能指针的操作，这个库弥补这个问题。
# 1.75 是 2013-12 月发布的，这个库很新，内部使用 不安全代码，不知道可能会有 bug.
async-trait = "0.1.77"

lib-demo={ path = "libdemo" }
