[package]
name = "trail-rust-mysql"
version = "0.1.0"
authors = ["chaosannals <chaosannals@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-rustls", "mysql" ] }
