[package]
name = "webdemo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
actix-session.workspace = true
actix-files.workspace = true
awc.workspace = true
# 4 年没维护的库版本对不上 actix 了。引入会导致 actix 部分库版本冲突，编译失败。
# actix-taskqueue.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
log.workspace = true
# sqlx.workspace = true
sea-orm.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
futures-util.workspace = true
chrono.workspace = true