[package]
name = "webdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true

lib-demo.workspace = true

# musl 下面需要添加这个让 openssl-sys build
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
