[package]
name = "lib-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
actix-session.workspace = true
actix-cors.workspace = true
awc.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
sea-orm.workspace = true
sea-query.workspace = true
derive_more.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
futures-util.workspace = true
chrono.workspace = true
regex.workspace = true
anyhow.workspace = true
apalis.workspace = true

reqwest.workspace = true
tokio.workspace = true

# rust 1.75 提供的 async trait fn 不支持 Box Arc 等传智能指针的操作，这个库弥补这个问题。
# 1.75 是 2013-12 月发布的，这个库很新，内部使用 不安全代码，不知道可能会有 bug.
async-trait.workspace = true