[package]
name = "webdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { workspace = true }
actix-web = { workspace = true }
actix-web-actors =  { workspace = true }
awc = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

lib-demo={ workspace = true }