[package]
name = "wsclidemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true

tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true