[package]
name = "seaormdemo"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1" }
sea-orm = { version = "^0.9.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "mock", ] }


[workspace]
members = [
    "migration",
]