[package]
name = "leveladbdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-leveldb = {workspace=true, features = ["async"]}
anyhow.workspace=true
tokio = { workspace=true, features = ["rt", "macros"] }