[package]
name = "trial-rust-imgui"
version = "0.1.0"
authors = ["chaosannals <chaosannals@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5"
glium = "0.29.0"
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
imgui-glium-renderer = "0.7.0"