[package]
name = "trial-rust-kasui"
version = "0.1.0"
authors = ["chaosannals <chaosannals@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kas = "0.6.0"
kas-macros = "0.6.0"
kas-wgpu = "0.6.0"
kas-theme = "0.6.0"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.8.3"
