[package]
name = "trial-rust-uniqrow"
version = "0.1.0"
authors = ["chaosannals <chaosannals@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.10"
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
